Bug 156138 - Missing "Go to" action for heading level issue types
Summary: Missing "Go to" action for heading level issue types
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0
Keywords: accessibility
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-07-03 11:29 UTC by Samuel Mehrbrodt
Modified: 2023-07-06 11:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (11.13 KB, application/vnd.oasis.opendocument.text)
2023-07-03 11:29 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2023-07-03 11:29:32 UTC
Created attachment 188179 [details]
bugdoc

1. Open bugdoc
2. Go to a11y check deck

Issue "A heading with outline level 2 must not follow a heading with outline level 0." and "Outline levels of headings not in sequential order." should be clickable so that you can jump to the location where this issue appears.
Comment 1 Commit Notification 2023-07-06 07:48:17 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c07810abf1a08e6abfa57163eb8a8d4786fbf88d

tdf#156138 - Add "Go to" action for heading level issue types

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.