tdf#156138 - Add "Go to" action for heading level issue types

Change-Id: Id491e2ca4ae7f63d25f7ad76704084bbda2f14ce
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154076
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>